<resources>
    <string name="app_name">Serenitea</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">175558051288954</string>
    <string name="fb_login_protocol_scheme">fb175558051288954</string>
    <string name="select_avt">Select your avatar</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="email_forgot_pwd">Enter the email address associated with your account.</string>
    <string name="or">OR</string>
    <string name="send">Send</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="pwd">Password</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="change_pwd">Change Password</string>
    <string name="change_pwd_extended">Change your Serenitea password.</string>
    <string name="new_pwd">New password</string>
    <string name="update">Update</string>
    <string name="email">Email address</string>
    <string name="caps_app_name">SERENITEA</string>
    <string name="create_quote_txt">Tap here to write your quote.</string>
    <string name="sample_quote_send">When you can\'t control what\'s happening, challenge yourself to control the way you respond. That\'s where your power is.</string>
    <string name="sample_quote_share">Time you enjoy wasting is not wasted time.</string>
    <string name="nickname">Nickname</string>
    <string name="dob">Date of birth</string>
    <string name="save">Save</string>
    <string name="add_friend">Add friend</string>
    <string name="send_quote">Send a quote</string>
    <string name="decline">Decline</string>
    <string name="sample_nickname">Seonna, 20</string>
    <string name="sample_dob">15/08/2000</string>
    <string name="sample_teacup">15</string>
    <string name="edit">Edit</string>
    <string name="emote_question">How are you feeling?</string>
    <string name="noti">Notifications</string>
    <string name="emote_chart">Your emotional chart</string>
    <string name="friend_req">Friend Requests</string>
    <string name="search_friend_txt">Search for a friend</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
</resources>