<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraint_forgotpwd_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="376dp"
                android:layout_height="381dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintTitle"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="144dp"
                        android:layout_height="144dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/forgot_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="52dp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/forgot_pwd"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        android:textSize="32sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/forgot_enter_email"
                        android:layout_width="299dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:gravity="center"
                        android:text="@string/email_forgot_pwd"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/forgot_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField1"
                    style="@style/BlueTextInputLayoutStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/forgot_email"
                        android:layout_width="302dp"
                        android:layout_height="56dp"
                        android:drawableEnd="@drawable/ic_email"
                        android:drawableRight="@drawable/ic_email"
                        android:textCursorDrawable="@drawable/color_cursor" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="167dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/send"
                    android:textSize="14sp"
                    app:backgroundTint="@color/background_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outlinedTextField1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>
