<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_edit_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageButton
                    android:id="@+id/btn_choose_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/avatar_2" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    style="@style/PinkTextInputLayoutStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/nickname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_choose_avatar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setup_nickname"
                        android:layout_width="302dp"
                        android:layout_height="56dp"
                        android:inputType="text"
                        android:textCursorDrawable="@drawable/color_cursor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="302dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outlinedTextField" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField1"
                    style="@style/PinkTextInputLayoutStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/dob"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setup_dob"
                        android:layout_width="302dp"
                        android:layout_height="56dp"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:drawableRight="@drawable/ic_calendar"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="167dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/save"
                    android:textSize="14sp"
                    app:backgroundTint="@color/background_pink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outlinedTextField1" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>